@@ -7,6 +7,7 @@ omit bug fixes.
 The items are sorted inversely, i.e. lastest items are on top
 
 --------------------------------------------------------------------------
+* Price implements Comparable
 * add Model#isConnected()
 * rename Model.getProperties() to getConnectProperties()
 	deprecated version is provided
